<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="30"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:background="@color/colorBlack">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorGold"
            android:textAlignment="center"
            android:textSize="40sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="25"
        android:weightSum="3"
        android:background="@drawable/bg2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/stat_l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorGold"
                    android:textAlignment="center"
                    android:textSize="40sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_below="@id/stat_l1">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_stats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:background="@color/colorBlack">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorGold"
            android:textAlignment="center"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>
