<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:weightSum="30"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:background="@color/colorBlack">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/colorGold"
                android:textAlignment="center"
                android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="25"
            android:weightSum="3"
            android:background="@drawable/bg2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <HorizontalScrollView
                    android:id="@+id/scrollv"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="30dp">
                    <LinearLayout
                        android:id="@+id/linear_cartas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>
                </HorizontalScrollView>
                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/scrollv">
                    <TextView
                        android:id="@+id/txv_num"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="100sp"
                        android:layout_gravity="center"
                        android:text="0"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/linear2">
                    <Button
                        android:id="@+id/btn_pedir"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:background="@color/colorBlack"
                        android:layout_gravity="center"
                        android:text="@string/pedir"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/linear3">
                    <Button
                        android:id="@+id/btn_plantar"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:background="@color/colorBlack"
                        android:layout_gravity="center"
                        android:text="@string/stop"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/linear4">
                    <Button
                        android:id="@+id/btn_restart"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:background="@color/colorBlack"
                        android:layout_gravity="center"
                        android:text="@string/restart"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/linear5"
                    android:background="@color/colorBlack">
                    <ImageView
                        android:id="@+id/iv_stats"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_leaderboard_white_24dp"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:background="@color/colorBlack">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/colorGold"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
</LinearLayout>
